Task 1.2: Change HTML Data
Updated info in heading and bio paragraph

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container d-flex align-items-center flex-column">
                 
                 <!-- This code is for the student name-->
-                <h1 class="masthead-heading text-uppercase mb-0">Test Student</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Evelyn Wong</h1>
                 <!--This code creates the two lines separating the student name from the subtitle-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -37,7 +37,11 @@
 
             <div class="col-md-6 col-lg-4 mb-5">
                 <!-- put your bio paragraph here; remember to use the correct html tags -->
-                
+                <p>
+                    Evelyn is a UX Designer with a passion for creating user-centered digital experiences. 
+                    She has a Bachelors of Science in Business and previoously worked in project management at Bain & Company.
+                    Evelyn is currently pursuing her Master's in Information Systems at UC Berkeley and pursuing product development.
+                </p>
             </div>
         </section>
     </body>
