Updated styling and formatting

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <style>
             /* Center the table on the page */
             #showDataJSON table {
-                margin-left: auto;
-                margin-right: auto;
+                margin: 0 auto; /* This ensures the table is centered horizontally */
+                width: 75%;
                 border-collapse: collapse;
             }
 
@@ -50,7 +50,7 @@
         </header>
         <section class="text-center">
 
-            <div class="col-md-6 col-lg-4 mb-5">
+            <div class="mt-5 text-center">
                 <!-- put your bio paragraph here; remember to use the correct html tags -->
                 <p>
                     Evelyn is a UX Designer with a passion for creating user-centered digital experiences. 
