--- a/list.html
+++ b/list.html
@@ -4,6 +4,21 @@
         <link rel="stylesheet" href="style1.css">
         <link rel="stylesheet" href="table_style.css">
         <title>My Webpage Title</title>
+        <style>
+            /* Center the table on the page */
+            #showDataJSON table {
+                margin: 0 auto; /* This ensures the table is centered horizontally */
+                width: 75%;
+                border-collapse: collapse;
+            }
+
+            /* Center-align the text inside the table cells */
+            #showDataJSON th, #showDataJSON td {
+                text-align: center;
+                padding: 10px;
+                border: 1px solid #ddd;
+            }
+        </style>
     </header>
     <body>  
         <!---Navigation--->
