Fixed header position
Placed header above the content

--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
                 <p class="masthead-subheading font-weight-light mb-0">School of Information Student</p>
             </div>
         </header>
+
+        <div class="welcome-header">
+            <h1>Hi, welcome to my website!</h1>
+        </div>
+
         <section class="bio-container">
-            <header>
-                <h1>Hi, welcome to my website!</h1>
-            </header>
             <img src="evelyn_pic.png" alt="portrait photo of me">
                 <!-- put your bio paragraph here; remember to use the correct html tags -->
                 <p>
