--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             header {
                 text-align: left;
                 margin-top: 20px;
+                max-width: 75%;
             }
     
             /* Flexbox layout for bio and image */
@@ -17,7 +18,7 @@
                 align-items: center;
                 justify-content: center;
                 margin: 20px auto;
-                max-width: 1200px; /* Adjust width as needed */
+                max-width: 75%;
                 padding: 20px;
             }
     
